[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Environmnent/Decoration/Sign08.png" type="Texture" id=1]
[ext_resource path="res://Assets/Environmnent/Building07_Glow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Environmnent/Building07.png" type="Texture" id=3]
[ext_resource path="res://Assets/Environmnent/Light01.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Part05/Part05_Club.gd" type="Script" id=5]
[ext_resource path="res://Prefabs/Selectable/Selectable.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sounds/Club00.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/Environmnent/Building07_Door.png" type="Texture" id=8]
[ext_resource path="res://Shaders/Glow.shader" type="Shader" id=9]


[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 9 )
shader_param/keep_size = true
shader_param/offset = Vector2( 0.5, 0.5 )
shader_param/scale = 0.0
shader_param/glow_radius = 10.0
shader_param/glow_amount = 0.0

[node name="Part05_Club" type="Sprite"]
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Glow" type="Sprite" parent="."]
modulate = Color( 1, 0.72549, 0.72549, 0.894118 )
material = SubResource( 1 )
position = Vector2( -17.7617, 32.6459 )
texture = ExtResource( 2 )

[node name="Light00" type="Light2D" parent="Glow"]
position = Vector2( -513.059, -7.72974 )
scale = Vector2( 1.55519, 1.54877 )
texture = ExtResource( 4 )
color = Color( 1, 0.337255, 0.337255, 1 )

[node name="Light01" type="Light2D" parent="Glow"]
position = Vector2( 236.564, -6.9342 )
scale = Vector2( 1.12294, 1.76766 )
texture = ExtResource( 4 )
color = Color( 1, 0.337255, 0.337255, 1 )

[node name="Light02" type="Light2D" parent="Glow"]
position = Vector2( 553.826, 7.9187 )
scale = Vector2( 0.647479, 0.644804 )
texture = ExtResource( 4 )
color = Color( 1, 0.337255, 0.337255, 1 )

[node name="Sign" type="Sprite" parent="."]
position = Vector2( -60.9102, -248.264 )
rotation = -0.0021006
scale = Vector2( 0.64434, 0.64434 )
texture = ExtResource( 1 )

[node name="FakeSelectable" type="Sprite" parent="." groups=[
"selectable",
]]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 543.951, 131.353 )
scale = Vector2( 0.527483, 0.192482 )
z_index = 3
texture = ExtResource( 4 )
script = ExtResource( 6 )
description_key = "Description028"

[node name="Door" type="Sprite" parent="." groups=[
"selectable",
]]
material = SubResource( 2 )
position = Vector2( -77.0089, 105.767 )
texture = ExtResource( 8 )
script = ExtResource( 6 )
effect_offset_key = "offset"
effect_key = "scale"
effect_hover = 0.5
effect_default = 0.0

[node name="BassSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true
max_distance = 3000.0
attenuation = 3.4822
